--- a/cloud-test/cloud-test-provider/src/main/resources/bootstrap.properties
+++ b/cloud-test/cloud-test-provider/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name=test-provider
 spring.cloud.config.uri=http://localhost:9800
-spring.cloud.config.failFast=true
+spring.cloud.config.failFast=false
