--- a/eureka/src/main/resources/bootstrap.properties
+++ b/eureka/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name=eureka
 spring.cloud.config.uri=http://localhost:9800
-spring.cloud.config.failFast=true
+spring.cloud.config.failFast=false
