--- a/cloud-test/pom.xml
+++ b/cloud-test/pom.xml
@@ -13,6 +13,11 @@
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <dependencies>
+        <!--eureka注册与发现 支持-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
         <!--断路器 支持-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -26,11 +31,10 @@
             <!--<groupId>org.springframework.cloud</groupId>-->
             <!--<artifactId>spring-cloud-starter-stream-rabbit</artifactId>-->
         <!--</dependency>-->
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-zipkin</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
     <modules>
         <module>cloud-test-api</module>
