更改cloud版本  加入了监控面板

--- a/cloud-test/cloud-test-consumer/src/main/resources/application.yml
+++ b/cloud-test/cloud-test-consumer/src/main/resources/application.yml
@@ -12,5 +12,5 @@ spring:
 #    port: 5672
 #    username: guest
 #    password: guest
-#  zipkin:
-#    base-url: http://localhost:9412
+  zipkin:
+    base-url: http://localhost:9412
