--- a/cloud-test/cloud-test-provider/src/main/resources/application.yml
+++ b/cloud-test/cloud-test-provider/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 server:
     port: 3001
+management:
+  port: 4001
 eureka:
     client:
       service-url:
          defaultZone: http://user:123456@localhost:8762/eureka/
+    instance:
+      metadata-map:
+         management.port: ${management.port}
 spring:
   application:
     name: test-provider
