--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -8,16 +8,16 @@ spring:
   application:
     name: zuul
 
-#zuul:
-#  routes:
-#     api-a-url:
-#           path: /api/c/**
-#           serviceId: test-consumer
-#    api-b-url:
-#           path: /api/p/**
-#           serviceId: test-provider
+zuul:
+  routes:
+     api-a-url:
+           path: /api/c/**
+           serviceId: test-consumer
+    api-b-url:
+           path: /api/p/**
+           serviceId: test-provider
 ##禁用过滤器（zuul.过滤器className.filterType.disable=true）
-#zuul:
-#  PreRequestFilter:
-#     pre:
-#       disable: true
+zuul:
+  PreRequestFilter:
+     pre:
+       disable: true
