zipkin加入mq通知  mysql存储

--- a/zipkin/src/main/resources/application.yml
+++ b/zipkin/src/main/resources/application.yml
@@ -20,3 +20,8 @@ spring:
     schema: classpath:/zipkin.sql
     initialize: true
     continue-on-error: true
+  sleuth:
+    enabled: false
+zipkin:
+  storage:
+    type: mysql
