--- a/cloud-test/cloud-test-provider/src/main/resources/application.yml
+++ b/cloud-test/cloud-test-provider/src/main/resources/application.yml
@@ -17,5 +17,5 @@ spring:
     port: 5672
     username: guest
     password: guest
-  zipkin:
-    base-url: http://localhost:9411
+#  zipkin:
+#    base-url: http://localhost:9411
