--- a/config/pom.xml
+++ b/config/pom.xml
@@ -13,10 +13,19 @@
 	<name>config</name>
 	<description>cloud服务配置</description>
 	<dependencies>
+		<!--eureka注册与发现 支持-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
 		<!--配置中心支持-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
 		</dependency>
 	</dependencies>
 
