--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>config</module>
         <module>zipkin</module>
         <module>hystrix-dashboard</module>
+        <module>microservice-demo</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
