--- a/microservice-demo/demo-server/src/main/resources/application.yml
+++ b/microservice-demo/demo-server/src/main/resources/application.yml
@@ -24,13 +24,23 @@ spring:
     consumer:
       group-id: test-group
   datasource:
-      url: jdbc:mysql://localhost:3309/test1?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false&useOldAliasMetadataBehavior=true
-      username: root
-      password: 123456
-      driver-class-name: com.mysql.jdbc.Driver
-      schema: classpath:/ddl/init.ddl
-      initialize: true
-      continue-on-error: true
+    primary:
+        url: jdbc:mysql://localhost:3309/test1?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false&useOldAliasMetadataBehavior=true
+        username: root
+        password: 123456
+        driver-class-name: com.mysql.jdbc.Driver
+        #自动执行sql的功能未生效
+#        schema: classpath:/ddl/primary/init.ddl
+#        initialize: true
+#        continue-on-error: true
+    secondary:
+        url: jdbc:mysql://localhost:3310/test2?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false&useOldAliasMetadataBehavior=true
+        username: root
+        password: 123456
+        driver-class-name: com.mysql.jdbc.Driver
+#        schema: classpath:/ddl/secondary/init.ddl
+#        initialize: true
+#        continue-on-error: true
 feign:
   hystrix:
     enabled: true
