--- a/microservice-demo-cloud/demo-common/pom.xml
+++ b/microservice-demo-cloud/demo-common/pom.xml
@@ -17,5 +17,9 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 </project>
