--- a/microservice-demo-dubbo/demo-spring-dubbo-starter/pom.xml
+++ b/microservice-demo-dubbo/demo-spring-dubbo-starter/pom.xml
@@ -13,7 +13,7 @@
     <name>demo-spring-dubbo-starter</name>
     <dependencies>
         <dependency>
-            <groupId>dubbo</groupId>
+            <groupId>dubbo-ts</groupId>
             <artifactId>spring-boot-dubbo-starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
